Bug Fix: The Profile menu is visible again.

--- a/style/nav_profile_overlay.css
+++ b/style/nav_profile_overlay.css
@@ -20,7 +20,7 @@
 
 /* Visible state for navigation profile container */
 .nav-profile-container.show {
-  right: 50px;
+  right: 520px;
 }
 
 .nav-profile-link-container {
